spacing issues

--- a/styling.css
+++ b/styling.css
@@ -1,7 +1,8 @@
 /* Template for a CSS rule */
 h1 {
     font-family: 'Times New Roman', Times, serif;
-    left: 200px;
+    left: 100px;
+    right: 100px;
     position: relative;
     font-size: 20px;
     color: rgb(78, 163, 233);
